--- a/players/xapi-videojs/index.html
+++ b/players/xapi-videojs/index.html
@@ -6,6 +6,7 @@
     <link href="video-js-6.1.0/video-js.css" rel="stylesheet">
     <script src="video-js-6.1.0/ie8/videojs-ie8.min.js"></script>
     <script src="video-js-6.1.0/video.js"></script>
+    <script src="videojs-youtube-2.6.1/Youtube.min.js"></script>
     <script type="text/javascript" src="xAPIWrapper-1.10.4/src/xapiwrapper.js"></script>
     <script type="text/javascript" src="xAPIWrapper-1.10.4/lib/cryptojs_v3.1.2.js"></script>
     <script type="text/javascript" src="xapi-videojs.js"></script>
